--- a/.github/workflows/scrapdata.yml
+++ b/.github/workflows/scrapdata.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Timezone
+        uses: szenius/set-timezone@v1.0
+        with:
+            timezoneLinux: "Asia/Singapore"
+
+    
       - name: Checkout Code
         uses: actions/checkout@v2
 
